Merge core api and ui