@@ -12,12 +12,142 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.weasis.core</groupId>
   <artifactId>weasis-core</artifactId>
-  <name>Core plugins [${project.artifactId}]</name>
-  <packaging>pom</packaging>
+  <name>Core [${project.artifactId}]</name>
+  <packaging>jar</packaging>
 
-  <modules>
-    <module>weasis-core-parent</module>
-    <module>weasis-core-api</module>
-    <module>weasis-core-ui</module>
-  </modules>
+  <properties>
+    <jxlayer.version>3.0.4</jxlayer.version>
+    <xchart.version>3.8.1</xchart.version>
+    <LGoodDatePicker.version>11.3.0-r1</LGoodDatePicker.version>
+    <lablib-checkboxtree.version>3.3</lablib-checkboxtree.version>
+    <VectorGraphics2D.version>0.13</VectorGraphics2D.version>
+  </properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-dependency</id>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <includeArtifactIds>scribejava-core,scribejava-java8,lablib-checkboxtree,jxlayer,LGoodDatePicker,xchart,VectorGraphics2D</includeArtifactIds>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>biz.aQute.bnd</groupId>
+        <artifactId>bnd-maven-plugin</artifactId>
+        <configuration>
+          <bnd>
+            -includeresource: @target/dependency/lablib-checkboxtree-${lablib-checkboxtree.version}.jar!/!(it/cnr/imaa/essi/lablib/gui/checkboxtree/examples/*)
+            -includeresource.all: lib/=target/dependency/;filter:=!lablib*.jar;lib:=true
+            Import-Package: !org.apache.commons.codec.binary;resolution:=optional,com.madgag.gif.fmsware;resolution:=optional,de.rototor.pdfbox.graphics2d;\
+            resolution:=optional,org.apache.pdfbox.pdmodel.*;resolution:=optional,\
+            !sun.swing,*
+            Export-Package: !org.weasis.core.internal,org.weasis.core.ui.*,org.weasis.core.api.*
+            -exportcontents: com.github.scribejava.*,it.cnr.imaa.*,org.jdesktop.jxlayer.*,com.github.lgooddatepicker.*,\
+            com.privatejgoodies.*,org.knowm.xchart.*,de.erichseifert.*
+          </bnd>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            -Xshare:off
+            --add-opens java.desktop/java.beans=ALL-UNNAMED
+          </argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.gogo.command</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.gogo.shell</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.gogo.runtime</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.weasis.core</groupId>
+      <artifactId>weasis-core-img</artifactId>
+      <version>${weasis.core.img.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.prefs</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.weasis.thirdparty</groupId>
+      <artifactId>jaxb-osgi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.github.scribejava</groupId>
+      <artifactId>scribejava-core</artifactId>
+      <version>${scribejava.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.scribejava</groupId>
+      <artifactId>scribejava-java8</artifactId>
+      <version>${scribejava.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.weasis.thirdparty</groupId>
+      <artifactId>jaxb-osgi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.weasis.thirdparty</groupId>
+      <artifactId>docking-frames</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>it.cnr.imaa.essi</groupId>
+      <artifactId>lablib-checkboxtree</artifactId>
+      <version>${lablib-checkboxtree.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.swinglabs</groupId>
+      <artifactId>jxlayer</artifactId>
+      <version>${jxlayer.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.lgooddatepicker</groupId>
+      <artifactId>LGoodDatePicker</artifactId>
+      <version>${LGoodDatePicker.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.knowm.xchart</groupId>
+      <artifactId>xchart</artifactId>
+      <version>${xchart.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.madgag</groupId>
+          <artifactId>animated-gif-lib</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>de.rototor.pdfbox</groupId>
+          <artifactId>graphics2d</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>de.erichseifert.vectorgraphics2d</groupId>
+      <artifactId>VectorGraphics2D</artifactId>
+      <version>${VectorGraphics2D.version}</version>
+    </dependency>
+  </dependencies>
 </project>
